--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Elena <ziggy.taren.44@gmail.com>"]
 readme = "README.md"
+packages = [
+  { include = "gendiff" },
+]
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
