--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,15 @@ gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+safeloader = "^0.1.2"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[project.optional-dependencies]
+dev = ["pytest"]
