--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 [tool.poetry.dependencies]
 python = "^3.11"
 safeloader = "^0.1.2"
+pyyaml = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
